app/deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multimodal-chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multimodal-chatbot
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: multimodal-chatbot
        deployment: multimodal-chatbot
    spec:
      containers:
        - name: multimodal-chatbot
          image: quay.io/rh-aiservices-bu/multimodal-chatbot:latest
          ports:
            - containerPort: 5000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          volumeMounts:
          - name: config-volume
            mountPath: '/opt/app-rot/src/config'
            readOnly: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      volumes:
      - name: config-volume
        secret:
          secretName: multimodal-chatbot
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
