app/deployment/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: multimodal-chatbot
  labels:
    app: multimodal-chatbot
spec:
  to:
    kind: Service
    name: multimodal-chatbot
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
